# splashkit-core

./: .gitignore  CONTRIBUTING.md  coverage.info  setup.py  splashkit-core.sln  test.py  test_python_version
.github/workflows/: test-windows.yml
coresdk/lib/mac-arm/: libSDL2.dylib  libSDL2_gfx.dylib  libSDL2_mixer.dylib  libSDL2_net-2.0.0.dylib  libSDL2_ttf-2.0.0.dylib
coresdk/src/backend/: adc_driver.cpp  adc_driver.h  backend_types.h  gpio_driver.cpp  gpio_driver.h  graphics_driver.cpp  graphics_driver.h  input_driver.cpp  input_driver.h  interface_driver.cpp  json_driver.h
coresdk/src/coresdk/: animations.h  basics.cpp  basics.h  circle_geometry.cpp  clipping.h  collides.cpp  collides.h  collisions.cpp  collisions.h  data_analytics.cpp  data_analytics.h  data_frame.cpp  data_frame.h  dataframe.cpp  dataframe.h  drawing_options.h  game_learning.cpp  game_learning.h  graphics.h  images.cpp  images.h  interface.h  machine_learning.cpp  machine_learning.h  matrix_2d.cpp  matrix_2d.h  music.cpp  music.h  networking.cpp  networking.h  particle_system.cpp  particle_system.h  physics.cpp  physics.h  point_drawing.cpp  point_drawing.h  point_geometry.h  random.cpp  raspi_adc.cpp  raspi_adc.h  (+22 more)
coresdk/src/coresdk/particlesystem/: particle_system.h
coresdk/src/test/: seasons.cpp  test_circle_collide.cpp  test_collisions.cpp  test_data_analytics.cpp  test_data_frame.cpp  test_dataframe.cpp  test_graphics.cpp  test_input.cpp  test_machine_learning.cpp  test_main.cpp  test_main.h  test_microui.cpp  test_networking.cpp  test_particle_system.cpp  test_raspi_adc.cpp  test_raspi_gpio.cpp  test_raspi_motor.cpp  test_raspi_servo.cpp  test_raspi_spi.cpp  test_remote_gpio.cpp  test_shape_drawing.cpp  test_sprites.cpp  test_terminal.cpp  test_ui.cpp  test_wiringPi.cpp
coresdk/src/test/unit_tests/: unit_test_bitmap.cpp  unit_test_camera.cpp  unit_test_color.cpp  unit_test_data_analytics.cpp  unit_test_data_frame.cpp  unit_test_dataframe.cpp  unit_test_geometry.cpp  unit_test_graphics.cpp  unit_test_json.cpp  unit_test_music.cpp  unit_test_network.cpp  unit_test_raspi_gpio.cpp  unit_test_shape_drawing.cpp  unit_test_sound_effect.cpp  unit_test_sprites.cpp  unit_test_utilities.cpp
coverage_report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage_report/backend/: audio_driver.cpp.func-c.html  audio_driver.cpp.func.html  audio_driver.cpp.gcov.html  backend_types.h.func-c.html  backend_types.h.func.html  backend_types.h.gcov.html  concurrency_utils.h.func-c.html  concurrency_utils.h.func.html  concurrency_utils.h.gcov.html  core_driver.cpp.func-c.html  core_driver.cpp.func.html  core_driver.cpp.gcov.html  graphics_driver.cpp.func-c.html  graphics_driver.cpp.func.html  graphics_driver.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  input_driver.cpp.func-c.html  input_driver.cpp.func.html  input_driver.cpp.gcov.html  interface_driver.cpp.func-c.html  interface_driver.cpp.func.html  interface_driver.cpp.gcov.html  interface_driver_atlas.h.func-c.html  interface_driver_atlas.h.func.html  interface_driver_atlas.h.gcov.html  json_driver.cpp.func-c.html  json_driver.cpp.func.html  json_driver.cpp.gcov.html  json_driver.h.func-c.html  json_driver.h.func.html  json_driver.h.gcov.html  logging_driver.cpp.func-c.html  logging_driver.cpp.func.html  logging_driver.cpp.gcov.html  network_driver.cpp.func-c.html  network_driver.cpp.func.html  network_driver.cpp.gcov.html  text_driver.cpp.func-c.html  (+17 more)
coverage_report/coresdk/: animations.cpp.func-c.html  animations.cpp.func.html  animations.cpp.gcov.html  audio.cpp.func-c.html  audio.cpp.func.html  audio.cpp.gcov.html  basics.cpp.func-c.html  basics.cpp.func.html  basics.cpp.gcov.html  camera.cpp.func-c.html  camera.cpp.func.html  camera.cpp.gcov.html  circle_geometry.cpp.func-c.html  circle_geometry.cpp.func.html  circle_geometry.cpp.gcov.html  collisions.cpp.func-c.html  collisions.cpp.func.html  collisions.cpp.gcov.html  color.cpp.func-c.html  color.cpp.func.html  color.cpp.gcov.html  drawing_options.cpp.func-c.html  drawing_options.cpp.func.html  drawing_options.cpp.gcov.html  geometry.cpp.func-c.html  geometry.cpp.func.html  geometry.cpp.gcov.html  graphics.cpp.func-c.html  graphics.cpp.func.html  graphics.cpp.gcov.html  images.cpp.func-c.html  images.cpp.func.html  images.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  input.cpp.func-c.html  input.cpp.func.html  input.cpp.gcov.html  json.cpp.func-c.html  (+71 more)
languages/cpp/: splashkit_starter.cpp
projects/cmake/: CMakeLists.txt  CMakePresets.json  clean.sh  lcov.err
splashkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/scripts/: deploy.sh
tools/scripts/cmake/libsplashkit/: CMakeLists.txt
tools/scripts/cmake/splashkit-csharp/: CMakeLists.txt
tools/scripts/cmake/splashkit-python/: CMakeLists.txt
tools/scripts/cmake/splashkitpas/: CMakeLists.txt
tools/scripts/homebrew/: README.md  splashkit.rb
tools/scripts/nuget-pkg/: SplashKitSDK.csproj  download-libraries.sh
